--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <h1>My name is Renee Davis</h1>
+    <h3>Check out <a href="github.com/ren-nay">my github!</a></h3>
   </head>
   <body>
-    <h1>Renee Davis</h1>
+    <p>I am going to figure out how to incorperate bootstrap into this website! Wish me luck.</p>
   </body>
 </html>
