re-formatting to begin following bootstrap tutorial

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Renee Follows a Bootstrap Tutorial</title>
+    
+  </head>
   <head>
     <h1>My name is Renee Davis</h1>
     <h3>Check out <a href="github.com/ren-nay">my github!</a></h3>
