--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>My name is Renee Davis</h1>
-    <h3>Check out <a href="github.com/ren-nay">my github!</a></h3>
+    <h3>Check out <a href="https://www.github.com/ren-nay">my github!</a></h3>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <p>I am going to figure out how to incorperate bootstrap into this website! Wish me luck.</p>
   </body>
