--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Renee Follows a Bootstrap Tutorial</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
-    <h1>My name is Renee Davis</h1>
-    <small>Check out <a href="https://www.github.com/ren-nay">my github!</a></small>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <p>I am going to figure out how to incorperate bootstrap into this website! Wish me luck.</p>
+    <div class="container">
+      <h1>My name is Renee Davis</h1>
+      <small>Check out <a href="https://www.github.com/ren-nay">my github!</a></small>
+      <p>I am going to figure out how to incorperate bootstrap into this website! Wish me luck.</p>
+    </div>
   </body>
 </html>
