--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>My name is Renee Davis</h1>
       <small>Check out <a href="https://www.github.com/ren-nay">my github!</a></small>
-      <p>I am going to figure out how to incorperate bootstrap into this website! Wish me luck.</p>
+      <p>I am going to figure out how to incorporate bootstrap into this website! Wish me luck.</p>
     </div>
   </body>
 </html>
